--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/react-datepicker": "^6.2.0",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-countup": "^6.5.0",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.3.0",
