--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.424.0",
     "motion": "^12.23.24",
-    "next": "^14.2.0",
-    "react": "^18.2.0",
+    "next": "^16.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-countup": "^6.5.0",
     "react-datepicker": "^8.8.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.0",
     "react-intersection-observer": "^9.16.0",
+    "react-vertical-timeline-component": "^3.5.3",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
