--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.424.0",
     "motion": "^12.23.24",
     "next": "^16.0.1",
+    "ogl": "^1.0.11",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
