--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.4.0",
     "@tabler/icons-react": "^3.35.0",
     "@types/react-datepicker": "^6.2.0",
     "chart.js": "^4.5.1",
@@ -30,7 +31,8 @@
     "react-vertical-timeline-component": "^3.5.3",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
