--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^9.4.0",
     "@tabler/icons-react": "^3.35.0",
     "@types/react-datepicker": "^6.2.0",
@@ -26,6 +29,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-countup": "^6.5.0",
     "react-datepicker": "^8.8.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
     "react-intersection-observer": "^9.16.0",
     "react-vertical-timeline-component": "^3.5.3",
